<resources>
    <string name="app_name">ChatAppPrueba3</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="sign_in_loading_dialog">Creando usuario...</string>

    <string name="menu_users">Users</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_requests">Requests</string>
    <string name="menu_my_requests">My requests</string>
    <string name="menu_create_group">Create group</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login2" translatable="false">LoginActivity2</string>

    <string name="user_name">Nombre usuario</string>
    <string name="users_add_user">Agregar</string>
    <string name="users_sended_request">Solicitud enviada</string>
    <string name="users_accept_request">Aceptar solicitud</string>
    <string name="users_friends">Amigos</string>

    <string name="chats_connected">En línea</string>
    <string name="chats_write_a_message">Escribe un mensaje...</string>
    <string name="chats_choose_alert_dialog">Enviar fotos</string>
    <string name="chats_text_online">Online</string>
    <string name="chats_last_today">Last seen today at </string>
    <string name="chats_last_seen">Last seen </string>
    <string name="chats_at"> at </string>
    <string-array name="chats_alert_dialog_choices">
        <item>Cámara de fotos</item>
        <item>Galería</item>
    </string-array>

    <string name="login_empty_email">Email is required</string>
    <string name="login_validate_email">Please enter a valid email</string>
    <string name="login_failed_credentials">Failed to login! Please check your credentials</string>
    <string name="login_pass_required">Password is required</string>

    <string name="login_user">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_no_account">No account yet? Create an account</string>

    <string name="preference_privacy">Privacy</string>
    <string name="preference_online">Last seen</string>
    <string name="preference_online_sum">If turned off, you won\'t be able to see who\'s online</string>
    <string name="preference_read_receipt">Read receipts</string>
    <string name="preference_read_receipt_sum">If turned off, you won\'t send or receive Read receipts.</string>

    <string name="register_pass_match">Password doesn\'t match</string>
    <string name="register_fields_required">All fields are required</string>
    <string name="register_unexpected_error">Unexpected error ocurred</string>
    <string name="register_select_photo">Choose a picture. We suggest a small one where your face is visible</string>
    <string name="register_name">Name: </string>
    <string name="register_surname">Surname:</string>
    <string name="register_email">Email:</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm password</string>
    <string name="register_register">Register</string>
    <string name="register_password_length">Password length minimun is 6</string>

    <string name="main_settings">Settings</string>
    <string name="main_logout">Logout</string>
    <string name="chats_alert_dialog_cancel">Cancelar</string>
    <string name="chats_upload_file_too_long">El límite de tamaño de los archivos adjuntos es de 15MB. Seleccione otro archivo y vuelta a intentarlo.</string>
    <string name="chats_downloading_file">Descargando archivo...</string>
    <string name="my_requests_no_request">Aun no has enviado ninguna solicitud</string>

    <string name="requests_no_request">Aun no has recibido ninguna solicitud</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
</resources>