<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_users">

    <fragment
        android:id="@+id/nav_users"
        android:name="com.example.chatappprueba3.ui.users.UsersFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_users" />

    <fragment
        android:id="@+id/nav_chats"
        android:name="com.example.chatappprueba3.ui.chats.ChatsFragment"
        android:label="@string/menu_chats"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/nav_requests"
        android:name="com.example.chatappprueba3.ui.requests.RequestsFragment"
        android:label="@string/menu_requests"
        tools:layout="@layout/fragment_requests" />

    <fragment
        android:id="@+id/nav_my_requests"
        android:name="com.example.chatappprueba3.ui.myrequests.MyRequestsFragment"
        android:label="@string/menu_my_requests"
        tools:layout="@layout/fragment_requests" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.chatappprueba3.ui.settings.SettingsFragment"/>

    <action android:id="@+id/open_settings_fragment"

        app:destination="@id/settingsFragment"/>
</navigation>