<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:elevation="10dp"
        android:layout_margin="6dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_margin="5dp"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/imageViewUsers"
                android:layout_width="56dp"
                android:layout_height="56dp"

                />

            <TextView
                android:textColor="@color/black"
                android:text="@string/user_name"
                android:id="@+id/textViewUserName"
                android:textSize="18dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>

            <Button
                android:id="@+id/button_add"
                android:visibility="gone"
                android:theme="@style/Button.Default"
                android:textSize="10dp"
                android:layout_marginLeft="18dp"
                android:layout_gravity="center"
                android:textColor="#000"
                android:drawableLeft="@drawable/ic_baseline_person_add_24"
                android:text="@string/users_add_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Button>

            <Button
                android:id="@+id/button_sended_request"
                android:visibility="gone"
                android:theme="@style/Button.Pressed"
                android:textSize="10dp"
                android:layout_marginLeft="18dp"
                android:layout_gravity="center"
                android:textColor="#000"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:text="@string/users_sended_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Button>

            <Button
                android:id="@+id/button_got_request"
                android:visibility="gone"
                android:theme="@style/Button.Default"
                android:textSize="10dp"
                android:layout_marginLeft="18dp"
                android:layout_gravity="center"
                android:textColor="#000"
                android:drawableLeft="@drawable/ic_baseline_check_24"
                android:text="@string/users_accept_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Button>

            <Button
                android:id="@+id/button_friends"
                android:visibility="gone"
                android:theme="@style/Button.Default"
                android:textSize="10dp"
                android:layout_marginLeft="18dp"
                android:layout_gravity="center"
                android:textColor="#000"
                android:drawableLeft="@drawable/ic_baseline_check_24"
                android:text="@string/users_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Button>

            <ProgressBar
                android:layout_gravity="center"
                android:id="@+id/progressBarCardView"
                android:layout_marginLeft="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>